@@ -1,0 +1,3 @@
+foo=bar# intra-line comment
+
+ leadingSpace = nullified # also test for an intra-line comment (make sure it's ignored!)
